KNOX-3262 Remove Java 17 message on Knox start-up (#1158)